--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,13 @@ nav .brand-logo {
   color: #444;
 }
 
+#movie-details-space,
+#movie-details-title{
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 20px;
+}
 #movie-info{
-  padding: 30px;
+  padding: 20px;
 }
 
 .movie-snippet{
