--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,22 @@ footer.page-footer {
   margin: 25px 15px;
   overflow: auto;
 }
+
+#title{
+  font-size: 80px;
+  background: rgb(231,192,37, .7);
+  font-weight: bold;
+  border: black solid 2px;
+}
+
+#huh{
+  font-size: 3em;
+  background: rgb(231,192,37, .7);
+  font-weight: bold;
+  border: black solid 2px;
+  padding: 20px;
+}
+
+#alt-movies-btn{
+  font-size: 1.5em;
+}
